<resources>
    <string name="app_name" translatable="false">TravelCompanion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_planned_trips">Planned trips</string>
    <string name="menu_journal">Travel Journal</string>
    <string name="menu_progress_prediction">Analysis &amp; Prediction</string>
    <string name="menu_settings">Settings</string>
    <string name="start">Start</string>
    <string name="location_permission_needed">We need location permission to track your trip. Please enable it.</string>
    <string name="positive_button_string">Okay</string>
    <string name="negative_button_string">Cancel</string>
    <string name="fine_location_permission_denied">Fine location permission is required to track your trip</string>
    <string name="stop_tracking_trip">Stop tracking trip</string>
    <string name="start_fragment_title">TRACKING YOUR TRIP</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="set_new_note">Set a new note</string>
    <string name="add_note">Add note</string>
    <string name="note_content">Note content</string>
    <string name="note_title">Note title</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="pick_start_date">Pick Start Date</string>
    <string name="enter_destination">Enter destination</string>
    <string name="save">Save</string>
    <string name="archive">Archive</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="plan">Plan</string>
    <string name="looks_like_you_have_not_completed_any_trips_yet">Looks like you have not completed any trips yet!</string>
    <string name="looks_like_you_have_not_completed_any_type_trips_yet">Looks like you have not completed any %1$s trips yet!</string>
    <string name="check_out_your_completed_trips_on_the_map">CHECK OUT YOUR COMPLETED TRIPS ON THE MAP!</string>
    <string name="notes">Notes</string>
    <string name="pictures">Pictures</string>
    <string name="select_trip">Select trip</string>
    <string name="all">All</string>
    <string name="close">Close</string>
    <string name="complete_trip">Complete trip</string>
    <string name="analysis">Analysis</string>
    <string name="prediction">Prediction</string>
    <string name="kilometres">kilometres</string>
    <string name="looks_like_you_have_no_planned_trips">Looks like you have no planned trips!\nTap the + button to add one</string>
    <string name="trip_title">Trip title</string>
    <string name="trip_title_value">Trip Title Value</string>
    <string name="when_was_the_picture_taken">When was the picture taken?</string>
    <string name="time_it_was_taken">Time it was taken</string>
    <string name="how_much_into_the_trip_was_the_picture_taken">How much into the trip was the picture taken?</string>
    <string name="time_into_the_trip">Time into the trip</string>
    <string name="picture_info">Picture info</string>
    <string name="title">Title</string>
    <string name="destination">Destination</string>
    <string name="start_date">Start date</string>
    <string name="start_trip">Start trip</string>
    <string name="edit_trip">Edit trip</string>
    <string name="delete_trip">Delete trip</string>
    <string name="enter_title">Enter title</string>
    <string name="trip_destination">Trip destination</string>
    <string name="trip_type">Trip type</string>
    <string name="trip_title_1">Trip title</string>
    <string name="title1">Title</string>
    <string name="destination1">Destination:</string>
    <string name="type">Type:</string>
    <string name="start1">Start:</string>
    <string name="end">End:</string>
    <string name="distance">Distance:</string>
    <string name="duration">Duration:</string>
    <string name="distances_covered">Distances covered:</string>
    <string name="top_destinations">Top destinations:</string>
    <string name="total_distance">Total distance:</string>
    <string name="travel_frequency">Travel Frequency:</string>
    <string name="debug_populate_db">DEBUG: POPULATE DB</string>
    <string name="filter_by_type">Filter by type:</string>
    <string name="enter_title1">Enter title</string>
    <string name="recommendations">Recommendations</string>
    <string name="trend_for_number_of_trips">Trend for Number of Trips</string>
    <string name="trend_for_monthly_distance">Trend for Monthly Distance</string>
    <string name="filter_by_year">Filter by year</string>
    <string name="objective_not_met">Objective not met</string>
    <string name="objective_for_number_of_monthly_trips">Objective for number of monthly trips</string>
    <string name="number_of_trips">Number of trips</string>
    <string name="objective_for_monthly_distance_m">Objective for monthly distance (m)</string>
    <string name="distance_in_meters">Distance in meters</string>
    <string name="when_would_you_like_to_be_notified_to_start_tracking">When would you like to be notified to start tracking?</string>
    <string name="days_of_inactivity_for_reminder">Days of inactivity for reminder:</string>
    <string name="save1">Save</string>
    <string name="_00_00" translatable="false">00:00</string>
    <string name="title2">Title</string>
    <string name="date1">Date</string>
    <string name="type1">Type</string>
    <string name="destination2">Destination</string>
    <string name="note_title1">Note title:</string>
    <string name="trip_title1">Trip title:</string>
    <string name="trip_destination1">Trip destination:</string>
    <string name="date">Date:</string>
    <string name="tot_dist_km" translatable="false">%1$s km</string>
    <string name="it_looks_like_no_pictures_have_been_taken">Looks like no pictures have been taken!</string>
    <string name="it_looks_like_no_notes_have_been_written">Looks like no notes have been written!</string>
    <string name="marker_value" translatable="false">Value: %1$s</string>
    <string name="trip_dist_m" translatable="false">%1$s m</string>
    <string name="trip_duration_s" translatable="false">%1$s s</string>
    <string name="selected_date">Selected Date: %1$s/%2$s/%3$s</string>
    <string name="plan_dialog_start_date" translatable="false">%1$s/%2$s/%3$s</string>
    <string name="predicted_number_of_trips">Predicted number of trips: %1$s</string>
    <string name="predicted_distance">Predicted distance: %1$.1f m</string>
    <string name="legend_monthly_trips">Monthly trips</string>
    <string name="legend_monthly_distance">Monthly distance</string>
    <string name="legend_moving_avg">Moving avg.</string>
    <string name="legend_prediction">Prediction</string>
    <string name="recommendation_min_trips">Try to go on at least 2 trips per month to build a good habit!</string>
    <string name="recommendation_consistency">Great consistency! You are averaging %1$.1f trips per month.</string>
    <string name="recommendation_explore">Consider exploring new destinations to diversify your travel experiences!</string>
    <string name="recommendation_long_trips">You are going on long trips. Keep it up!</string>
    <string name="recommendation_plan_long_trip">Consider planning a long trip to explore further destinations!</string>
    <string name="recommendation_decline">A decline in travel activity is forecast. Here are some ideas for new trips: visit a nearby city, explore a natural park, or plan a weekend getaway!</string>
    <string name="recommendation_increase_frequency">Try to increase the frequency of your trips to keep your motivation high.</string>
    <string name="recommendation_trend">Based on trends, aim for ~%1$d trips next month. Current average is %2$.1f trips per month.</string>
    <string name="duration_months_days">%1$d months %2$d days</string>
    <string name="duration_days_hours">%1$d days %2$d hours</string>
    <string name="duration_hours_minutes">%1$d hours %2$d minutes</string>
    <string name="duration_minutes_seconds">%1$d minutes %2$d seconds</string>
    <string name="duration_seconds">%1$d seconds</string>
    <string name="filter_all">Filter: All</string>
    <string name="filter_by_year1">Filter by year: %1$s</string>
    <string name="plan_created_successfully">Plan created successfully</string>
    <string name="please_fill_all_fields">Please fill all fields</string>
    <string name="settings_saved">Settings saved!</string>
    <string name="trip_updated">Trip updated</string>
    <string name="trip_deleted">Trip deleted</string>
    <string name="activity_recognition_permission_missing">Activity recognition not possible due to missing permissions</string>
    <string name="notification_permission_required">Notification permission is required</string>
    <string name="camera_permission_required">Camera permission is required</string>
    <string name="photo_capture_cancelled">Photo capture cancelled</string>
    <string name="trip_completed">Trip completed!</string>
    <string name="title_needed">Title is needed</string>
    <string name="destination_needed">Destination is needed</string>
    <string name="title_and_note_needed">Title and note content are needed</string>
    <string name="note_added_to_trip">Note added to trip</string>
    <string name="tracking_your_trip">Tracking your trip!</string>
    <string name="go_to_the_app_to_see_your_path">Go to the app to see your path</string>
    <string name="struggling_to_meet_goals">You\'re struggling to meet your goals!</string>
    <string name="predicted_trips_goal">Predicted trips: %1$d / Goal: %2$d</string>
    <string name="predicted_distance_goal">Predicted distance: %1$.0f m / Goal: %2$d m</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="months">months</string>
    <string name="trip_start_title">Trip start: %1$s</string>
    <string name="trip_end_title">Trip end: %1$s</string>
    <string name="start_tracking_trip">Start tracking your trip!</string>
    <string name="activity_detected_title">%1$s detected</string>
    <string name="activity_driving">Driving</string>
    <string name="activity_cycling">Cycling</string>
    <string name="activity_running">Running</string>
</resources>
