<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/pickDateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_start_date"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/destinationEditText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/enter_destination" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save" />

</LinearLayout>