<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.journal.archive.ArchiveFragment"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/pictures_layout">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/archive_button_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:selectionRequired="true"
            app:singleSelection="true"
            app:checkedButton="@+id/pictures_button">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pictures_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pictures"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/notes_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"/>
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <pl.utkala.searchablespinner.SearchableSpinner
            android:id="@+id/trip_selection_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/archive_button_group"
            app:layout_constraintLeft_toLeftOf="@id/archive_button_group"
            app:layout_constraintRight_toRightOf="@id/archive_button_group"
            app:dialogTitle="@string/select_trip"
            app:closeText="@string/cancel"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gallery_recView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/trip_selection_spinner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_recView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/trip_selection_spinner"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>